--- a/example/rpc-model/Cargo.toml
+++ b/example/rpc-model/Cargo.toml
@@ -9,9 +9,11 @@ name = "rpc_model"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+pytarpc = { path = "../../" }
+
+
 pyo3 = { version = "0.25.0", features = ["extension-module"] }
 pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
 tarpc = { version = "0.37.0", features = ["serde-transport", "tcp"] }
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
 tokio = { version = "1.47.1" }
-pyo3-generator-macro = { path = "/home/diegopardo/pytarpc/pyo3-generator-macro/" }
