--- a/example/rpc-model/Cargo.toml
+++ b/example/rpc-model/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rpc-model"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -19,3 +19,4 @@ pyo3-async-runtimes = { version = "0.27.0", features = [
 tarpc = { version = "0.37.0", features = ["serde-transport", "tcp"] }
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
 tokio = { version = "1.47.1" }
+serde = { version = "1.0.228", features = ["derive"] }
